--- a/style.css
+++ b/style.css
@@ -1,101 +1,36 @@
-* {
-  margin: 0;
-  padding: 0;
-  user-select: none;
-  box-sizing: border-box;
-}
-
 body {
-  background-color: #0581ca;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  
+  background-color: whitesmoke;
 }
 
-.box {
-  background-color: white;
-  padding-top: 30px;
-  padding: 30px;
-  max-width: 100vh;
+#form {
+  background-color: gainsboro;
+  border-radius: 4px;
 }
 
-.box h2 {
-  margin-bottom: 40px;
-  text-align: center;
-  font-size: 26px;
-  color: #015a96;
-  font-family: sans-serif;
+span {
+  font-weight: bolder;
 }
 
-input {
-  padding: 20px;
-  user-select: none;
-  height: 50px;
-  width: 400px;
-  border-radius: 6px;
-  border: 2px solid rgb(13, 152, 245);
-  outline: none;
-  font-size: 22px;
-}
-
-input::placeholder {
-  font-size: 23px;
-}
-
-#caracteres {
-  display: inline;
-  margin-right: 1rem;
-  font-size: 18px;
-  color: #015a96;
-  font-family: sans-serif;
-}
 #number {
-  width: 100px;
+  width: 90px;
   display: inline;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
 }
 
-.btn {
-  align-items: center;
-  appearance: none;
-  background-color: #3EB2FD;
-  background-image: linear-gradient(1deg, #4F58FD, #149BF3 99%);
-  background-size: calc(100% + 20px) calc(100% + 20px);
-  border-radius: 100px;
-  border-width: 0;
-  box-shadow: none;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  cursor: pointer;
-  display: inline-flex;
-  font-family: CircularStd,sans-serif;
-  font-size: 1rem;
-  height: auto;
-  justify-content: center;
-  line-height: 1.5;
-  padding: 6px 20px;
-  position: relative;
+.divPassword {
   text-align: center;
-  text-decoration: none;
-  transition: background-color .2s,background-position .2s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  vertical-align: top;
-  white-space: nowrap;
+  background-color: gainsboro;
+  border-radius: 4px;
 }
 
-.btn:active,
-.btn-21:focus {
-  outline: none;
+#password {
+  width: 300px;
+  display: inline;
+  font-weight: bolder;
 }
 
-.btn1:hover {
-  background-position: -20px -20px;
+#btn2 {
+  display: inline;
 }
 
-.btn:focus:not(:active) {
-  box-shadow: rgba(40, 170, 255, 0.25) 0 0 0 .125em;
-}
+
+
